--- a/surveillancePi.conf
+++ b/surveillancePi.conf
@@ -4,7 +4,7 @@
 # after first getting notified of movement.
 # Added this so you wouldn't get blasted with texts if
 # there is alot of movement in a short amount of time.
-# The value is in minutes
+# The value is in minutes. Default 10 minutes.
 
 textsleep 10
 
@@ -14,11 +14,11 @@ textsleep 10
 
 reciever 8175555555@vtext.com
 
-# This values is needed for text sleep. Basically it
+# This value is needed for text sleep. Basically it
 # is the last timestamp plus the amount of minutes
 # to sleep. The python script will refer to this value
 # to make sure that it has slept enough for sending texts
-# It is initially 0, it will change by it self
+# It is initially 0.0, it will change by it self
 # Do not modify this value
 
 textstamp 0.0
